Fixed the white spaces on the sides of the container-fluid.
Made the color of class black, and it now looks great!!!

--- a/css/main.css
+++ b/css/main.css
@@ -119,6 +119,9 @@ background-color: #887575;
   background-image: linear-gradient(to bottom,#000000 0,#000000 100%);
 }
 
+.container-fluid {
+  background-color: black;
+}
 
 @media screen and (max-width:320px) {
   #carousel-example-generic {
